client/style.css
/**
 * =========================================
 * General purpose classes
 * =========================================
 */

.center-children {
  text-align: center;
}

@media (min-width: 768px) {
  .bottom-container {
    margin-top: 130px;
  }
}

body, .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6  {
  font-family: "Helvetica Neue", Arial, sans-serif;
}

/**
 * =========================================
 * Nav Bar
 * =========================================
 */

.btn-outline-success {
  color: #1DB954;
}
.btn-outline-success:hover {
  background-color: #1DB954;
  border-color: #1DB954;
}

.has-success .form-control {
  border-color: #1DB954;
}

@media (max-width: 575px) {
  .submit-button {
    display: none;
  }
}

/**
 * =========================================
 * Artist Profile
 * =========================================
 */

.artist-profile-img {
  width: 200px;
  height: 200px;
  background-size: cover;
  background-position: center;
  border-radius: 50%;
  margin: 0 auto;
}

.artist-name {
  font-size: 5vw;
  color: white;
}

@media (max-width: 480px) {
  .artist-name {
    font-size: 22px;
  }
  .album-name {
    font-size: 18px;
  }
}

@media (max-width: 767px) {
  .artist-name {
    margin-top: 20px;
    margin-bottom: 20px;
  }
  .artist-profile-img {
    width: 150px;
    height: 150px;
  }
}

.artist-profile-placeholder {
  margin-top: 25px;
}

.cover-art-background {
  z-index: -2;
  top:0;
  background-repeat: no-repeat;
  background-position: 0%,0%,15%,30%,45%,60%,75%,90%,105%;
  height: 300px;
  width: 100%;
  position: absolute;
  -webkit-filter: blur(10px);
  filter: blur(10px);
}

/**
 * =========================================
 * Track list
 * =========================================
 */

.list-group {
  list-style: decimal inside;
}

.list-group-item {
  display: list-item;
}

/**
 * =========================================
 * Album Art
 * =========================================
 */

.album-list-outer {
  height: 750px;
  overflow-y: scroll;
  padding-bottom: 10px;
  margin-bottom: 10px;
}

.album-image {
  width:30%;
  height:auto;
  margin-right: 4px;
  margin-bottom: 8px;
  -webkit-box-shadow: 10px 10px 15px 0px rgba(0,0,0,0.75);
  -moz-box-shadow: 10px 10px 15px 0px rgba(0,0,0,0.75);
  box-shadow: 10px 10px 15px 0px rgba(0,0,0,0.75);
}

.popular-album-image {
  background-color: white;
}

/**
 * CSS for sidescrolling albums when viewed on mobile
 */
@media (max-width: 767px) {
  .album-list-outer{
    height:auto;
  }
  .album-list-inner {
    display: table-row;
  }
  .album-list-cell {
    display: table-cell;
  }
  .album-image {
    width: 118px;
  }
}

.active-album {
  border: 4px solid #1DB954;
}

